deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-api-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-api-demo
  template:
    metadata:
      labels:
        app: json-api-demo
    spec:
      containers:
        - name: json-api-demo
          image: your-docker-registry.com/json-api-demo:latest
          ports:
            - containerPort: 3000 # Burayı 3000 olarak değiştirin
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: regcred
