service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-api-demo-service
  namespace: default
spec:
  selector:
    app: json-api-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
